# cv-alejandro

./: README.md  cv.md  pyproject.toml
exports/docx/: alejandro-gaon-cv.docx
exports/html/: alejandro-gaon-cv.html
